@@ -1,3 +1,7 @@
+2019-02-22 belangeo <belangeo@gmail.com>
+
+    * CallAfter's time and arg arguments can be changed dynamically.
+
 2019-01-24 belangeo <belangeo@gmail.com>
 
     * Jack audio backend does not ignore duplex value anymore.
